--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>HomePage</h1>
+    <h1>Yangiliklar</h1>
+    <ul>
+        {% for post in object_list %}
+            <li> <h2>{{ post.title }}</h2></br> {{ post.text }}</li></br>
+
+        {% endfor %}
+    </ul>
 {% endblock content %}
 </body>
 </html>
